--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,4 +20,4 @@ formats: all
 python:
   version: 3.7
   install:
-      - requirements: resources/requirements.txt
+      - requirements: requirements.txt
