Lots of big changes made.
1. fixed example systemd service file, get_plextvdb_batch.service, to reflect correct executables.

2. new CLI, plex_tvdb_excludes, which administers those TV shows to exclude from automatic update.

3. fixed up all CLI documentation to properly use ArgumentParser help outputs. Also, some improvements to CLI tools with relatively unwieldy command line arguments.

4. Updates on installation documentation, among other things.

 Changes to be committed:
	modified:   docs/source/_static/get_plextvdb_batch.service
	modified:   docs/source/plex-core/cli_tools/plex_core_cli.rst
	modified:   docs/source/plex-email/cli-tools/plex_email_notif.rst
	modified:   docs/source/plex-tvdb/cli_tools/plex-tvdb-cli-figures/tvdata.2000.svg
	modified:   docs/source/plex-tvdb/cli_tools/plex-tvdb-cli-figures/tvdata.2005.svg
	modified:   docs/source/plex-tvdb/cli_tools/plex-tvdb-cli-figures/tvdata.2010.svg
	modified:   docs/source/plex-tvdb/cli_tools/plex-tvdb-cli-figures/tvdata.2015.svg
	modified:   docs/source/plex-tvdb/cli_tools/plex_tvdb_cli.rst
	modified:   docs/source/plex_prereqs.rst
	modified:   plexstuff/plexcore/cli/plex_resynclibs.py
	modified:   plexstuff/plexcore/cli/rsync_subproc.py
	modified:   plexstuff/plexemail/gui/plex_email_gui.py
	modified:   plexstuff/plexemail/plexemail_mygui.py
	modified:   plexstuff/plextvdb/cli/get_plextvdb_batch.py
	modified:   plexstuff/plextvdb/cli/get_tv_tor.py
	new file:   plexstuff/plextvdb/cli/plex_tvdb_excludes.py
	modified:   plexstuff/plextvdb/plextvdb.py
	modified:   requirements.txt
	modified:   setup.py

--- a/docs/source/_static/get_plextvdb_batch.service
+++ b/docs/source/_static/get_plextvdb_batch.service
@@ -4,7 +4,7 @@ Wants=get_plextvdb_batch.timer
 
 [Service]
 Type=oneshot
-ExecStart=$PLEXSTUFF_DIR/get_plextvdb_batch.py --maxtime=1200 --num=2
+ExecStart=$PLEXSTUFF_DIR/get_plextvdb_batch --maxtime=1200 --num=2
 
 [Install]
 WantedBy=default.target
