--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
+*png filter=lfs diff=lfs merge=lfs -text
+*mp4 filter=lfs diff=lfs merge=lfs -text
+*gif filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 . text !filter !merge !diff
