changed deploy action Sphinx makefile, to copy instead of rsync. rsync wasn't working 'for some reason.'

--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -20,5 +20,5 @@ help:
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 deploy:
-	rsync -avz --delete --progress build/html/ ../docs/
+	cp -rf build/html/ ../docs/
 	touch ../docs/.nojekyll
