--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -20,5 +20,5 @@ help:
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 deploy:
-	cp -rf build/html/ ../docs/
+	cp -rf build/html/* ../docs/
 	touch ../docs/.nojekyll
