--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -3,7 +3,7 @@
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = python3 -m sphinx
+SPHINXBUILD   = sphinx-build
 SPHINXPROJ    = howdy
 SOURCEDIR     = source
 BUILDDIR      = build
