--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -24,7 +24,7 @@ deploy:
 	touch ../docs/.nojekyll
 
 gitdeploy: deploy
+	echo "got here"
 	git pull
-        git stage ../docs ../docsrc
-        git commit -a -m "documentation update and deploy."
-        git push
+	git commit -a -m "documentation fix."
+	git push
