--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,6 @@ tabulate
 termcolor
 titlecase
 validators
-youtube_dl
+yt_dlp
 sphinxcontrib-youtube @ git+https://github.com/sphinx-contrib/youtube.git@master
 sphinxcontrib-svg2pdfconverter @ git+https://github.com/missinglinkelectronics/sphinxcontrib-svg2pdfconverter.git@master
