included a remotedeploy Makefile recipe for Sphinx documentation. Reason-behind-reason = https://tanimislam.gitlab.io/blog/howdy-deploy-remote-documentation.html.

--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -28,3 +28,6 @@ gitdeploy: deploy
 	git pull
 	git commit -a -m "documentation fix."
 	git push
+
+remotedeploy: deploy
+	rsync -avzP ../docs $(remote):$(directory)
